Do not prevent whitespace-wrapping in party sidebar by default

--- a/byceps/blueprints/core/static/style/party.css
+++ b/byceps/blueprints/core/static/style/party.css
@@ -140,7 +140,6 @@ nav.main li {
   display: block;
   margin: 0;
   padding: 0;
-  white-space: nowrap;
 }
 
 nav.main a {
